Change settings to use dotenv locally

--- a/tasks/templates/tasks/base.html
+++ b/tasks/templates/tasks/base.html
@@ -59,9 +59,9 @@
 </section>
 <footer class="footer mt-auto py-3 bg-gradient" style="background-color: #FFCB91;">
     <div class="container d-flex justify-content-center">
-    <span class="text-dark">
-        &copy; 2022 Corey Ellis
-    </span>
+        <span class="text-dark">
+            &copy; {% now "Y" %} Corey Ellis
+        </span>
         <span class="text-muted px-2">
 
             <a class="text-dark" href="https://www.linkedin.com/in/coreyellis821/">
