Disable home page buttons

--- a/tasks/templates/tasks/home.html
+++ b/tasks/templates/tasks/home.html
@@ -19,7 +19,7 @@
         <div class="row display-6 mb-3"><h2>Sign up or login above to get started!</h2></div>
     </div>
     <div class="d-flex justify-content-center">
-        <a class="btn btn-primary" href="#" role="button" aria-disabled="true">Add Task</a>
+        <a class="btn btn-primary disabled" role="button" aria-disabled="true">Add Task</a>
     </div>
     <hr>
     <div class="table-responsive">
@@ -41,24 +41,24 @@
                 <td>Pay rent!</td>
                 <td>General</td>
                 <td>Apr 2nd, 2022</td>
-                <td><a href="#" class="text-info ms-2" data-mdb-toggle="tooltip" title="Edit task"><i class="fas fa-pencil-alt"></i></a></td>
-                <td><a href="#" class="text-danger ms-3" data-mdb-toggle="tooltip" title="Delete task"><i class="fas fa-trash-alt"></i></a></td>
+                <td><a class="text-info ms-2" data-mdb-toggle="tooltip" title="Edit task"><i class="fas fa-pencil-alt"></i></a></td>
+                <td><a class="text-danger ms-3" data-mdb-toggle="tooltip" title="Delete task"><i class="fas fa-trash-alt"></i></a></td>
             </tr>
             <tr>
                 <td>May 12th, 2022</th>
                 <td>Book tickets to Portugal</td>
                 <td>General</td>
                 <td>Apr 14th, 2022</td>
-                <td><a href="#" class="text-info ms-2" data-mdb-toggle="tooltip" title="Edit task"><i class="fas fa-pencil-alt"></i></a></td>
-                <td><a href="#" class="text-danger ms-3" data-mdb-toggle="tooltip" title="Delete task"><i class="fas fa-trash-alt"></i></a></td>
+                <td><a class="text-info ms-2" data-mdb-toggle="tooltip" title="Edit task"><i class="fas fa-pencil-alt"></i></a></td>
+                <td><a class="text-danger ms-3" data-mdb-toggle="tooltip" title="Delete task"><i class="fas fa-trash-alt"></i></a></td>
             </tr>
             <tr>
                 <td>May 18th, 2022</th>
                 <td>Submit presentation</td>
                 <td>Work</td>
                 <td>Apr 15th, 2022</td>
-                <td><a href="#" class="text-info ms-2" data-mdb-toggle="tooltip" title="Edit task"><i class="fas fa-pencil-alt"></i></a></td>
-                <td><a href="#" class="text-danger ms-3" data-mdb-toggle="tooltip" title="Delete task"><i class="fas fa-trash-alt"></i></a></td>
+                <td><a class="text-info ms-2" data-mdb-toggle="tooltip" title="Edit task"><i class="fas fa-pencil-alt"></i></a></td>
+                <td><a class="text-danger ms-3" data-mdb-toggle="tooltip" title="Delete task"><i class="fas fa-trash-alt"></i></a></td>
             </tr>
             </tbody>
         </table>
